<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
      android:title="@string/proxy_cat">
    <com.github.shadowsocks.preference.ProfileEditTextPreference
        android:defaultValue="Default"
        android:key="profileName"
        android:summary="@string/profile_summary"
        android:title="@string/profile">
    </com.github.shadowsocks.preference.ProfileEditTextPreference>
    <com.github.shadowsocks.preference.SummaryEditTextPreference
        android:defaultValue="198.199.101.152"
        android:key="proxy"
        android:summary="@string/proxy_summary"
        android:title="@string/proxy">
    </com.github.shadowsocks.preference.SummaryEditTextPreference>
    <com.github.shadowsocks.preference.SummaryEditTextPreference
        android:defaultValue="443"
        android:key="remotePort"
        android:summary="@string/remote_port_summary"
        android:title="@string/remote_port">
    </com.github.shadowsocks.preference.SummaryEditTextPreference>
    <com.github.shadowsocks.preference.SummaryEditTextPreference
        android:defaultValue="1080"
        android:key="port"
        android:summary="@string/port_summary"
        android:title="@string/port">
    </com.github.shadowsocks.preference.SummaryEditTextPreference>
    <com.github.shadowsocks.preference.PasswordEditTextPreference
        android:inputType="textPassword"
        android:defaultValue="u1rRWTssNv0p"
        android:key="sitekey"
        android:summary="@string/sitekey_summary"
        android:title="@string/sitekey">
    </com.github.shadowsocks.preference.PasswordEditTextPreference>
    <ListPreference
        android:defaultValue="rc4"
        android:key="encMethod"
        android:entries="@array/enc_method_entry"
        android:entryValues="@array/enc_method_value"
        android:title="@string/enc_method">
    </ListPreference>
  </PreferenceCategory>
</PreferenceScreen>
